--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GlobalDefaultGameMode="/Script/EOS_TPP_Test.EOS_TPP_TestGameMode"
+GameDefaultMap=/Game/Maps/GameStartupMap.GameStartupMap
+EditorStartupMap=/Game/Maps/GameStartupMap.GameStartupMap
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_14
@@ -45,4 +45,33 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+
+[OnlineSubsystemEOS]
+bEnabled=true
+
+[OnlineSubsystem]
+DefaultPlatformService=EOS
+
+[/Script/Engine.GameEngine]
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemEOS.NetDriverEOS",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
+
+[/Script/OnlineSubsystemEOS.NetDriverEOS]
+bIsUsingP2PSockets=true
+
+[/Script/OnlineSubsystemEOS.EOSSettings]
+CacheDir=CacheDir
+DefaultArtifactName=EOS Product
+TickBudgetInMilliseconds=0
+bEnableOverlay=True
+bEnableSocialOverlay=True
+bShouldEnforceBeingLaunchedByEGS=False
+TitleStorageReadChunkLength=0
++Artifacts=(ArtifactName="EOS Product",ClientId="xyza7891C1ioBchTMDirZoTv4Paq7hHi",ClientSecret="OYAvDkk1Fo0L7MgCLdva6olsucNDq7nG6VYuiSNUVlw",ProductId="2ef1f14db57f4932b6414a2f9bd467d0",SandboxId="25a9a0bbc6e34654bc93e090e6419726",DeploymentId="261b1b7aef914225a682fa9fcbb10782",EncryptionKey="")
+bUseEAS=True
+bUseEOSConnect=True
+bMirrorStatsToEOS=True
+bMirrorAchievementsToEOS=True
+bUseEOSSessions=True
+bMirrorPresenceToEAS=True
 
